[modify]接入duoshuo，稍微修改样式

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # 基本配置
-name: Legolas' Blog
+name: "Legolas Blogs"
 email: wujianye3@gmail.com
 author: LegolasNg
 url: https://legolasng.github.io/
