--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # 基本配置
 name: "Legolas Blogs"
-author: LegolasNg
+author: legolas
 url: https://legolasng.github.io/
 resume_site: https://github.com/legolasNg/
 baseurl: ""
