[modify]add some social account

--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ banner: legolas
 
 # social
 github:     https://github.com/legolasNg/
-weibo:      http://weibo.com/wujianye
-facebook:   
-twitter:    
-linkedin:   
+weibo:      http://weibo.com/219920327
+facebook:   https://www.facebook.com/wulegolas
+twitter:    https://twitter.com/legolas_ng
+linkedin:   https://www.linkedin.com/in/legolasNg
 email:      wujianye3@gmail.com
 
 #permalink: /:categories/:year/:month/:day/:title/
