[add]add share extension

--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ FB:
     provider : duoshuo
     duoshuo:
         short_name : legolas
-    # disqus :
-    #     short_name : legolasng
+    disqus :
+        short_name : legolasng
     # facebook :
     #   appid : 123
     #   num_posts: 5
