[modify]delete slash after url

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # 基本配置
 name: "Legolas Blogs"
 author: legolas
-url: https://legolasng.github.io/
-resume_site: https://github.com/legolasNg/
+url: https://legolasng.github.io
+resume_site: https://github.com/legolasNg
 baseurl: ""
 description: keep it simple, stupid !
 meta_description: 请叫我"小叶子"！
@@ -10,7 +10,7 @@ motto: Talk is cheap, Show me the code !
 banner: legolas
 
 # social
-github:     https://github.com/legolasNg/
+github:     https://github.com/legolasNg
 weibo:      http://weibo.com/219920327
 facebook:   https://www.facebook.com/wulegolas
 twitter:    https://twitter.com/legolas_ng
