--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://legolasng.github.io
 resume_site: https://github.com/legolasNg
 baseurl: ""
 description: keep it simple, stupid !
-meta_description: 叫我"小叶子"就行！
+meta_description: "Errors = (More Code)<sup>2</sup>"
 motto: Talk is cheap, Show me the code !
 banner: legolas
 
