--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://legolasng.github.io
 resume_site: https://github.com/legolasNg
 baseurl: ""
 description: keep it simple, stupid !
-meta_description: "<font color="red"> Errors = (More Code)<sup>2</sup> </font>"
+meta_description: "<font color='red'> Errors = (More Code)<sup>2</sup> </font>"
 motto: Talk is cheap, Show me the code !
 banner: legolas
 
