[fix] fix site name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # 基本配置
-name: "Legolas Blogs"
+name: "Legolas' Blogs"
 author: legolas
 url: https://legolasng.github.io
 resume_site: https://github.com/legolasNg
